--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -125,7 +125,6 @@ h1 {
   padding-top:0px;
 }
 
-
 .halloween-content 
 {
   -webkit-text-stroke: .1px black;
@@ -154,6 +153,12 @@ h1 {
   font-family: 'Creepster', cursive;
   font-size: 20px;
   letter-spacing: 2px;
+}
+
+.btn {
+  background-color: #912914 !important;
+  border-color: #838383 !important;
+
 }
 
 .horror-text {
