--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -158,7 +158,12 @@ h1 {
 .btn {
   background-color: #912914 !important;
   border-color: #838383 !important;
+  min-width: 300px;
+  margin: 5px;
+}
 
+.input {
+  max-width: 300px;
 }
 
 .horror-text {
