--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -159,7 +159,13 @@ h1 {
   background-color: #912914 !important;
   border-color: #838383 !important;
   min-width: 300px;
-  margin: 5px;
+  margin-top: 5px;
+}
+
+.card-slide {
+  max-width: 300px;
+  background-color: hsla(0, 0%, 100%, 0.3);
+  color: black;
 }
 
 .input {
