--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -107,18 +107,19 @@
 
 /* Halloween Styles */
 .main-container {
-  /* width: 100vw;
-  height: 100vh; */
+  width: 100vw;
+  height: 100vh; 
   background-image: url(./images/skeleton2.jpg);
   background-attachment: fixed;
   background-size: cover;
-  background-position: top, left;
   /* min-height: 1100px; */
   padding-left: 20px;
   padding-right: 20px;
   padding-top:10px;
   
 }
+
+
 
 h1 {
   padding-bottom:10px;
@@ -132,13 +133,19 @@ h1 {
   color:white;
   font-size: 16px;
   background-color: hsla(0, 0%, 100%, 0.3);
-  max-width: 100%;  
+  max-width: 75%;  
   min-height: 300px;
   border-radius: 10px;
   padding: 10px;
-  margin-right: 0px;
+  margin-right: auto;
+  margin-left: auto;
+}
 
-
+.halloween-titles
+{
+  max-width: 75%; 
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .title {
