--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -112,7 +112,7 @@
   background-image: url(./images/skeleton2.jpg);
   background-attachment: fixed;
   background-size: cover;
-  /* min-height: 1100px; */
+  min-height: 1100px;
   /* padding-left: 20px;
   padding-right: 20px; */
   padding-top:10px;
